import "php.proto";
import "Control.proto";

package Ricochet.Channel.AuthHiddenService;
option (php.namespace) = "Ricochet.Channel.AuthHiddenService.Proto";
option (php.multifile) = true;

extend Control.OpenChannel {
    optional bytes client_cookie = 7200; // 16 random bytes
}

extend Control.ChannelResult {
    optional bytes server_cookie = 7200; // 16 random bytes
}

message Packet {
    optional Proof proof = 1;
    optional Result result = 2;
}

message Proof {
    optional bytes public_key = 1; // DER encoded RSA public key
    optional bytes signature = 2; // RSA signature
}

message Result {
    required bool accepted = 1;
    optional bool is_known_contact = 2;
}