import "Control.proto";
import "php.proto";

package Ricochet.Channel.ContactRequest;
option (php.namespace) = "Ricochet.Channel.ContactRequest.Proto";
option (php.multifile) = true;

extend Control.OpenChannel {
    optional ContactRequest contact_request = 200;
}

extend Control.ChannelResult {
    optional Response response = 201;
}

// ContactRequest

// Sent only as an attachment to OpenChannel
message ContactRequest {
    optional string nickname = 1;
    optional string message_text = 2;
}

message Response {
    enum Status {
        Undefined = 0; // Not valid in transmitted messages
        Pending = 1;
        Accepted = 2;
        Rejected = 3;
        Error = 4;
    }

    required Status status = 1;
    optional string error_message = 2;
}